--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
         "test": "node -r esm node_modules/protractor/bin/protractor conf.js"
     },
     "devDependencies": {
-        "protractor": "^5.4.2",
-        "esm": "^3.2.25"
+        "@types/jasmine": "^3.3.12",
+        "@types/protractor": "^4.0.0",
+        "esm": "^3.2.25",
+        "jasmine-allure-reporter": "^1.0.2",
+        "protractor": "^5.4.2"
     }
 }
